exercises/06_attribute/02_graceful_errors/tests/fail/has_args.stderr
error: #[describe] only works on functions that take no arguments
 --> tests/fail/has_args.rs:5:4
  |
5 | fn greet(name: &str) -> String {
  |    ^^^^^
